...
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ChooseProfil">


    <Button
        android:id="@+id/btnDonater"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:background="@color/btnDonater"
        android:text="@string/Donater"
        android:textColor="@color/background_white"
        android:typeface="serif"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <Button
...
